# quantduck

./: .cursorignore  .cursorref  .cursorrules  .gitignore  2.txt  README.md  hello.py  pr.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docs.yml  publish.yml
docs/: api.rst  conf.py  examples.rst  readme.md
docs/_build/doctrees/: api.doctree  environment.pickle  examples.doctree  index.doctree  readme.doctree
docs/_build/html/: .buildinfo.bak  api.html  examples.html  genindex.html  index.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/quantduck/core/: database.html
docs/_build/html/_sources/: examples.rst.txt  index.rst.txt
examples/: basic_usage.py  query_signals.py  test.ipynb
quantduck/: __init__.py
quantduck/core/: __init__.py  common.py  database.py  easy_query.py  filter.py  kline_validator.py  technical.py
scripts/: version_manager.py
tests/: test_database.py
