[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "quantduck"
version = "0.1.0"
description = "A quantitative analysis library"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
psycopg2-binary = "*"
pytz = "*"
pandas = "*"
